# ISO-Engine

./: .gitignore  CMakeLists.txt  README.md  shell.nix
src/: CMakeLists.txt  highlight.cpp  highlight.h  layer.cpp  layer.h  main.cpp  tile.cpp  tile.h  transforms.cpp  transforms.h  window.cpp  window.h  world.cpp  world.h
src/Linux/: resource.cpp  resource.h
